Wrap toolbar, fixes #22

--- a/public/style.css
+++ b/public/style.css
@@ -33,6 +33,7 @@ progress {
   margin-bottom: 5px;
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
 }
 .toolbar button, select {
   margin: 10px 3px;
